Fix: Social media icons font-size too small - refactor style rule

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -103,7 +103,7 @@ footer {
     position: relative;
 }
 
-.social-media > li {
+.social-media > li > a {
     font-size: 1.6rem;
     vertical-align: bottom;
 }
